[gd_scene load_steps=5 format=3 uid="uid://chxtkke3x2l3c"]

[ext_resource type="Script" path="res://main/npcs/npc_template.gd" id="1_1yuk0"]
[ext_resource type="Texture2D" uid="uid://bgirerswkdd4k" path="res://graphics/goobers/goober (test)/interact.png" id="1_5i1lc"]
[ext_resource type="Texture2D" uid="uid://bho7ihoey4pmw" path="res://graphics/goobers/goober (test)/overworld_sprite.png" id="1_gbwid"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fhv6f"]
size = Vector2(46, 18)

[node name="npc_template" type="Area2D"]
z_index = -3
script = ExtResource("1_1yuk0")

[node name="Overworld" type="Sprite2D" parent="."]
position = Vector2(0, -7)
texture = ExtResource("1_gbwid")

[node name="Speak" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_fhv6f")

[node name="Prompt" type="Sprite2D" parent="."]
position = Vector2(0, -40)
texture = ExtResource("1_5i1lc")

[node name="Bubble" type="CanvasLayer" parent="."]

[node name="ColorRect2" type="ColorRect" parent="Bubble"]
anchors_preset = -1
anchor_left = 0.103
anchor_top = 0.128
anchor_right = 0.897
anchor_bottom = 0.314
offset_left = 0.0799942
offset_top = -21.08
offset_right = -0.0800171
offset_bottom = -0.0400009
grow_horizontal = 2

[node name="Banner" type="TextureRect" parent="Bubble"]
anchors_preset = -1
anchor_left = 0.108
anchor_top = 0.131
anchor_right = 0.894
anchor_bottom = 0.369
offset_left = -0.120003
offset_top = -21.16
offset_right = -0.160034
offset_bottom = -20.84
expand_mode = 1
stretch_mode = 1

[node name="Dialogue" type="Label" parent="Bubble"]
anchors_preset = -1
anchor_left = 0.225
anchor_top = 0.103
anchor_right = 0.85
anchor_bottom = 0.284
offset_top = -7.08
offset_right = -30.0
offset_bottom = -6.24001
grow_horizontal = 2
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="Frame" type="ColorRect" parent="Bubble"]
anchors_preset = -1
anchor_left = 0.117
anchor_top = 0.161
anchor_right = 0.217
anchor_bottom = 0.339
offset_left = 0.119995
offset_top = -20.96
offset_right = 0.119995
offset_bottom = -21.04
color = Color(0.145098, 0.0901961, 0, 1)

[node name="FrameInner" type="ColorRect" parent="Bubble"]
anchors_preset = -1
anchor_left = 0.12
anchor_top = 0.167
anchor_right = 0.214
anchor_bottom = 0.333
offset_left = 0.199997
offset_top = -21.12
offset_right = 0.0399933
offset_bottom = -20.88
color = Color(0.219608, 0.164706, 0.0980392, 1)

[node name="Portrait" type="TextureRect" parent="Bubble"]
anchors_preset = -1
anchor_left = 0.122
anchor_top = 0.169
anchor_right = 0.211
anchor_bottom = 0.328
offset_left = -0.0800018
offset_top = -20.84
offset_right = -0.0400085
offset_bottom = -21.0798
expand_mode = 2
metadata/_edit_use_anchors_ = true

[node name="speechTimer" type="Timer" parent="Bubble"]
wait_time = 0.05
one_shot = true

[node name="Speech" type="AudioStreamPlayer" parent="."]
volume_db = 2.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
